# glicol

js/npm/: glicol_wasm.wasm
js/src/: glicol.js  glicol_wasm.wasm
rs/glicol_synth_embed/: Cargo.toml
rs/glicol_synth_embed/examples/: hello.rs
rs/glicol_synth_embed/src/: context.rs  graph.rs  lib.rs
rs/glicol_synth_embed/src/node/: boxed.rs  constsig.rs  destination.rs  mod.rs  pass.rs
rs/main/: Cargo.toml
rs/main/examples/: hello.rs  plot.rs
rs/main/src/: util.rs
rs/parser/: Cargo.toml  README.md
rs/parser/examples/: hello.rs  pv.rs
rs/parser/src/: glicol.pest  lib.rs
rs/parser2/: Cargo.toml
rs/parser2/src/: lib.rs
rs/synth/: Cargo.toml
rs/synth/src/: lib.rs
rs/synth/src/node/effect/: adjust.rs  mod.rs  vocoder.rs
rs/synth/src/node/sampling/: mod.rs  soundplayer.rs
rs/synth/src/node/sequencer/: seq.rs
rs/synth/src/node/signal/: points.rs
rs/synth2/: Cargo.toml  README.md
rs/synth2/examples/: channel.rs  connect.rs  hello.rs  plot.rs  plot2-saw.rs
rs/synth2/src/: context.rs  error.rs  lib.rs
rs/synth2/src/node/: constsig.rs  mod.rs  mul.rs  rlpf.rs  saw_osc.rs
rs/wasm/: Cargo.toml  README.md
